# ShortLang

./: .env.example  .gitignore  README.md  pyproject.toml
short_lang/: constants.py  host_models.py  llm_functions.py  shortlang.py
